--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -16,7 +16,8 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.navbar-brand{:href => "/"} EasyRaceLapTimer
+          %a.navbar-brand{:href => "/"}
+            = image_tag('logo_big.png')
         #navbar.collapse.navbar-collapse
           %ul.nav.navbar-nav
             %li.active
