--- a/web/app/views/monitor/_view.html.haml
+++ b/web/app/views/monitor/_view.html.haml
@@ -1,3 +1,10 @@
+.row
+  .col-md-4.col-md-offset-5
+    - if !@style_setting.own_logo_image.blank?
+      = image_tag(@style_setting.own_logo_image.thumb.url)
+    %h1
+      =@current_race_session.title
+
 %table.table.table-striped
   %thead
     %tr
