added pilots views, bugfixes

--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -23,7 +23,7 @@
             %li.active
               =link_to('Configuration',{action: 'index',controller: '/system'})
             %li
-              =link_to('Monitor',{action: 'index',controller: '/monitor'})
+              =link_to('Monitor',{action: 'index',controller: '/monitor'},{target: '_blank'})
         / /.nav-collapse
     .container
       .row
