websockets r now configurable via env variable RAILS_CABLE_IP

--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -8,6 +8,7 @@
     = javascript_include_tag 'application'
     = csrf_meta_tags
   %body
+
     %nav.navbar.navbar-inverse.navbar-fixed-top
       .container
         .navbar-header
@@ -33,3 +34,4 @@
               %button.close{"data-dismiss" => "alert"} ×
               = message
       = yield
+    = javascript_include_tag 'application'
