--- a/web/app/views/system/pilot/index.html.haml
+++ b/web/app/views/system/pilot/index.html.haml
@@ -18,7 +18,7 @@
     %label{:for => "exampleInputEmail2"}
       = t('pilot.quad')
     = f.text_field(:quad, placeholder: "ZMR 250 4S", class: 'form-control', required: true)
-  %button.btn.btn-default{:type => "submit"}
+  %button.btn.btn-primary{:type => "submit"}
     = t('actions.create')
 
 %table.table.table-striped
