--- a/web/app/views/system/index.html.haml
+++ b/web/app/views/system/index.html.haml
@@ -3,37 +3,53 @@
 
 .row
   .col-xs-6
-    = link_to(url_for(action: 'index', controller: '/system/pilot')) do
-      %button.btn.btn-large
-        %i.fa.fa-gamepad.fa-6
-          Pilots
+    .panel.panel-default
+      .panel-heading
+        %h2
+          Style Settings
+      .panel-body
+        = form_for(@style_setting,url: url_for(action: 'update_style')) do |f|
+          .form-group
+            %label{:for => ""}
+              = t('style_setting.own_logo_image')
+            = f.file_field :own_logo_image
+            - if !@style_setting.own_logo_image.blank?
+              = image_tag(@style_setting.own_logo_image.mini_thumb.url)
+          = f.submit class: "btn btn-default"
   .col-xs-6
-    %h2
-      Race Tracking
-    - if RaceSession::get_open_session
-      %label{:for => "exampleInputName2"}
-        active Session
-      = RaceSession::get_open_session.title
-      = link_to(t('actions.stop_race_session'),{action: 'stop_race_session'},{confirm: 'sure?',class: 'btn btn-primary btn-large'})
-    - else
-      = form_for(@race_session_prototype,url: {action: 'start_race_session'},html: {class: 'form-inline'}) do |f|
-        .form-group
-          %label{:for => "exampleInputName2"}
-            = t('pilot.name')
-          = f.text_field(:title, placeholder: "Awesome race", class: 'form-control', required: true)
+    .panel.panel-default
+      .panel-heading
+        %h2
+          Race Tracking
+      .panel-body
+        - if RaceSession::get_open_session
+          .row
+            .col-xs-12
+              %strong
+                %label{:for => "exampleInputName2"}
+                  Active Session:
+                = RaceSession::get_open_session.title
+          .row
+            .col-xs-12
+              = link_to(t('actions.stop_race_session'),{action: 'stop_race_session'},{confirm: 'sure?',class: 'btn btn-danger btn-large'})
+        - else
+          = form_for(@race_session_prototype,url: {action: 'start_race_session'},html: {class: 'form-inline'}) do |f|
+            .form-group
+              %label{:for => "exampleInputName2"}
+                = t('pilot.name')
+              = f.text_field(:title, placeholder: "Awesome race", class: 'form-control', required: true)
 
-        %button.btn.btn-default{:type => "submit"}
-          = t('actions.start_race_session')
+            %button.btn.btn-success{:type => "submit"}
+              = t('actions.start_race_session')
 
 .row
   .col-xs-6
-    %h2
-      Style Settings
-    = form_for(@style_setting,url: url_for(action: 'update_style')) do |f|
-      .form-group
-        %label{:for => ""}
-          = t('style_setting.own_logo_image')
-        = f.file_field :own_logo_image
-        - if !@style_setting.own_logo_image.blank?
-          = image_tag(@style_setting.own_logo_image.mini_thumb.url)
-      = f.submit
+    .panel.panel-default
+      .panel-heading
+        %h2
+          Other
+      .panel-body
+        = link_to(url_for(action: 'index', controller: '/system/pilot')) do
+          %button.btn.btn-large
+            %i.fa.fa-gamepad.fa-6
+              Pilots Configuration
