--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -22,10 +22,14 @@
             EasyRaceLapTimer
         #navbar.collapse.navbar-collapse
           %ul.nav.navbar-nav
-            %li.active
+            %li
               =link_to('Configuration',{action: 'index',controller: '/system'})
             %li
-              =link_to('Monitor',{action: 'index',controller: '/monitor'},{target: '_blank'})
+              =link_to('Monitor',{action: 'index',controller: '/monitor'})
+            %li
+              =link_to('Pilots',{action: 'index',controller: '/pilots'})
+            %li
+              =link_to('History',{action: 'index',controller: '/history'})
         / /.nav-collapse
     .container
       .row
