--- a/web/app/views/monitor/_view.html.haml
+++ b/web/app/views/monitor/_view.html.haml
@@ -2,8 +2,9 @@
   .col-md-4.col-md-offset-5
     - if !@style_setting.own_logo_image.blank?
       = image_tag(@style_setting.own_logo_image.thumb.url)
-    %h1
-      =@current_race_session.title
+
+%h1
+  =@current_race_session.title
 
 %table.table.table-striped
   %thead
@@ -15,23 +16,38 @@
       %th
         pilot
       %th
+        quad
+      %th
         fasted lap time
       %th
         last lap time
       %th
         laps
+      %th
+        avg lap time
   %tbody
     - @current_race_session.listing.each_with_index do |entry,index|
       %tr
         %td
-          = index + 1
+          %strong
+            = index + 1
         %td
           = image_tag(entry['pilot'].image.url,width: 50,height: 50)
         %td
-          = entry['pilot'].name
+          %strong
+            = entry['pilot'].name
         %td
-          = entry['fastest_lap']['lap_time'].to_f / 1000
+          %strong
+            = entry['pilot'].quad
         %td
-          = entry['last_lap']['lap_time'].to_f / 1000
+          %strong
+            = formated_lap_time(entry['fastest_lap']['lap_time'])
         %td
-          = entry['lap_count']
+          %strong
+            = formated_lap_time(entry['last_lap']['lap_time'])
+        %td
+          %strong
+            = entry['lap_count']
+        %td
+          %strong
+            = formated_lap_time(entry['avg_lap_time'])
