--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -5,11 +5,10 @@
       EasyRaceLapTimer
 
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application'
     = csrf_meta_tags
     = render file: '/shared/_favicon'
   %body
-
+    #host_data{"data-rails-cable-ip" => @RAILS_CABLE_IP}
     %navbar.navbar-default.navbar-fixed-top
       .container
         .navbar-header
