bug fixes for the rails app improved ir_daemon

--- a/web/app/views/history/index.html.haml
+++ b/web/app/views/history/index.html.haml
@@ -35,7 +35,7 @@
             = formated_lap_time(session.fastest_lap_time)
         %td
           %strong
-            = session.fastest_pilot.name
+            = session.fastest_pilot.name if session.fastest_pilot
         %td
           %strong
             = formated_lap_time(session.average_lap_time)
