--- a/web/app/views/system/index.html.haml
+++ b/web/app/views/system/index.html.haml
@@ -27,6 +27,7 @@
 
             %button.btn.btn-success{:type => "submit"}
               = t('actions.start_race_session')
+          = render partial: 'race_session_competition_modal'
 
 .row
   .col-xs-12.col-md-12.col-sm-12.col-lg-12
