first working version of the competition mode

--- a/web/app/views/history/index.html.haml
+++ b/web/app/views/history/index.html.haml
@@ -7,11 +7,13 @@
       %th
       %th
       %th Session
+      %th Mode
       %th Pilots
       %th Total Laps
       %th Fastest Lap
       %th Fastest Pilot
       %th Avg Lap Time
+      %th
   %tbody
     -  @race_sessions.each do |session|
       %tr
@@ -24,6 +26,8 @@
         %td
           %strong
             = link_to(session.title,{action: 'show', id: session.id})
+        %td
+          = session.mode
         %td
           %strong
             = session.num_pilots
@@ -39,3 +43,6 @@
         %td
           %strong
             = formated_lap_time(session.average_lap_time)
+        %td
+          - if current_user
+            = link_to('Delete',url_for(action: 'delete', id: session.id),{method: 'DELETE', class: 'btn btn-warning', "data-confirm" => 'Are you sure?'})
