--- a/web/app/views/system/index.html.haml
+++ b/web/app/views/system/index.html.haml
@@ -15,19 +15,26 @@
                 %label{:for => "exampleInputName2"}
                   Active Session:
                 = RaceSession::get_open_session.title
+                %label{:for => "exampleInputName2"}
+                  Mode:
+                = RaceSession::get_open_session.mode
           .row
             .col-xs-12
               = link_to(t('actions.stop_race_session'),{action: 'stop_race_session'},{confirm: 'sure?',class: 'btn btn-danger btn-large'})
         - else
-          = form_for(@race_session_prototype,url: {action: 'start_race_session'},html: {class: 'form-inline'}) do |f|
-            .form-group
-              %label{:for => "exampleInputName2"}
-                = t('pilot.name')
-              = f.text_field(:title, placeholder: "Awesome race", class: 'form-control', required: true)
+          .row
+            .col-xs-12
+              = form_for(@race_session_prototype,url: {action: 'start_race_session'},html: {class: 'form-inline'}) do |f|
+                .form-group
+                  %label{:for => "exampleInputName2"}
+                    = t('pilot.name')
+                  = f.text_field(:title, placeholder: "Awesome race", class: 'form-control', required: true)
 
-            %button.btn.btn-success{:type => "submit"}
-              = t('actions.start_race_session')
-          = render partial: 'race_session_competition_modal'
+                %button.btn.btn-success{:type => "submit"}
+                  = t('actions.start_standard_race_session')
+          .row
+            .col-xs-12
+              = render partial: 'race_session_competition_modal'
 
 .row
   .col-xs-12.col-md-12.col-sm-12.col-lg-12
