--- a/web/app/views/history/index.html.haml
+++ b/web/app/views/history/index.html.haml
@@ -46,3 +46,4 @@
         %td
           - if current_user
             = link_to('Delete',url_for(action: 'delete', id: session.id),{method: 'DELETE', class: 'btn btn-warning', "data-confirm" => 'Are you sure?'})
+          = link_to('XLSX Export',url_for(action: 'export_to_xlsx', id: session.id),{class: 'btn btn-success'})
