--- a/web/app/views/monitor/_view.html.haml
+++ b/web/app/views/monitor/_view.html.haml
@@ -1,67 +1,4 @@
-.row
-  .col-md-4.col-md-offset-5
-    - if !@style_setting.own_logo_image.blank?
-      = image_tag(@style_setting.own_logo_image.thumb.url)
-
-%h1
-  =@current_race_session.title
-
 - if @current_race_session.mode == "competition"
-  .panel.panel-default
-    .panel-body
-      %strong
-        Max Laps:
-        = @current_race_session.max_laps
-        Current Laps:
-        = @current_race_session_adapter.current_lap_count
-
-%table.table.table-striped
-  %thead
-    %tr
-      %th
-        place
-      %th
-
-      %th
-        pilot
-      %th
-        quad
-      %th
-        team
-      %th
-        fasted lap time
-      %th
-        last lap time
-      %th
-        laps
-      %th
-        avg lap time
-  %tbody
-    - @current_race_session_adapter.listing.each_with_index do |entry,index|
-      %tr
-        %td
-          %strong
-            = index + 1
-        %td
-          = image_tag(entry['pilot'].image.url,width: 50,height: 50)
-        %td
-          %strong
-            = entry['pilot'].name
-        %td
-          %strong
-            = entry['pilot'].quad
-        %td
-          %strong
-            = entry['pilot'].team
-        %td
-          %strong
-            = formated_lap_time(entry['fastest_lap']['lap_time'])
-        %td
-          %strong
-            = formated_lap_time(entry['last_lap']['lap_time'])
-        %td
-          %strong
-            = entry['lap_count']
-        %td
-          %strong
-            = formated_lap_time(entry['avg_lap_time'])
+  = render partial: 'view_competition_mode'
+-else
+  = render partial: 'view_standard_mode'
