--- a/web/app/views/system/index.html.haml
+++ b/web/app/views/system/index.html.haml
@@ -18,6 +18,12 @@
                 %label{:for => "exampleInputName2"}
                   Mode:
                 = RaceSession::get_open_session.mode
+                %label{:for => "exampleInputName2"}
+                  Num Satellites:
+                = RaceSession::get_open_session.num_satellites
+                %label{:for => "exampleInputName2"}
+                  Time Penalty Per Satellite:
+                = RaceSession::get_open_session.time_penalty_per_satellite
           .row
             .col-xs-12
               = link_to(t('actions.stop_race_session'),{action: 'stop_race_session'},{confirm: 'sure?',class: 'btn btn-danger btn-large'})
