--- a/web/app/views/monitor/_view_standard_mode.html.haml
+++ b/web/app/views/monitor/_view_standard_mode.html.haml
@@ -38,7 +38,7 @@
         avg lap time
   %tbody
     - @current_race_session_adapter.listing.each_with_index do |entry,index|
-      %tr
+      %tr{class: "#{"success" if entry['latest_tracked']}"}
         %td
           %strong
             = index + 1
