finished pdf generation

--- a/web/app/views/history/pdf_body.html.haml
+++ b/web/app/views/history/pdf_body.html.haml
@@ -1,8 +1,4 @@
-%h1
-  = @current_race_session.title
-
 - if @current_race_session.mode == "competition"
   = render partial: 'pdf_results_competition_mode'
-
-.page-break
-  test
+- else
+  = render partial: 'pdf_results_standard_mode'
