--- a/web/app/views/layouts/pdf.html.erb
+++ b/web/app/views/layouts/pdf.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset='utf-8' />
-    <%= stylesheet_link_tag "pdf" -%>
+    <%= wicked_pdf_stylesheet_link_tag "pdf" -%>
     <%= wicked_pdf_javascript_include_tag "number_pages" %>
   </head>
   <body onload='number_pages'>
