--- a/web/app/views/monitor/_view_competition_mode.html.haml
+++ b/web/app/views/monitor/_view_competition_mode.html.haml
@@ -19,73 +19,4 @@
         Time penalty:
         = formated_lap_time(@current_race_session.time_penalty_per_satellite)
 
-%table.table.table-striped
-  %thead
-    %tr
-      %th
-        place
-      %th
-
-      %th
-        race time
-      %th
-        pilot
-      %th
-        quad
-      %th
-        team
-      %th
-        fasted lap time
-      %th
-        last lap time
-      %th
-        laps
-      %th
-        avg lap time
-      %th
-        penalties
-      %th
-        penalty time
-      %th
-        time without penalties
-  %tbody
-    - @current_race_session_adapter.listing.each_with_index do |entry,index|
-      %tr{class: "#{"success" if entry['latest_tracked']}"}
-        %td
-          %strong
-            = index + 1
-        %td
-          = image_tag(entry['pilot'].image.url,width: 50,height: 50)
-        %td
-          %strong
-            = formated_lap_time(entry['race_time_sum_in_ms'])
-        %td
-          %strong
-            = entry['pilot'].name
-        %td
-          %strong
-            = entry['pilot'].quad
-        %td
-          %strong
-            = entry['pilot'].team
-        %td
-          %strong
-            = formated_lap_time(entry['fastest_lap']['lap_time'])
-        %td
-          %strong
-            = formated_lap_time(entry['last_lap']['lap_time'])
-        %td
-          %strong
-            = entry['lap_count']
-        %td
-          %strong
-            = formated_lap_time(entry['avg_lap_time'])
-        %td
-          %strong
-            = entry['num_time_penalties']
-        %td
-          %strong
-            = formated_lap_time(entry['sum_time_penalties_in_ms'])
-        %td
-          %strong
-            = formated_lap_time(entry['race_time_sum_in_ms_without_penalty'])
+= render file: '/shared/_table_race_results_competition_mode', locals: {race_session: @current_race_session, race_session_adapter: @current_race_session_adapter}
