various bug fixes

--- a/web/app/views/monitor/_view.html.haml
+++ b/web/app/views/monitor/_view.html.haml
@@ -1,4 +1,4 @@
 - if @current_race_session.mode == "competition"
-  = render partial: '/monitor/_view_competition_mode'
+  = render file: '/monitor/_view_competition_mode'
 -else
   = render file: '/monitor/_view_standard_mode'
