added version info the gui fixex image bug in pdf export

--- a/web/app/views/layouts/application.html.haml
+++ b/web/app/views/layouts/application.html.haml
@@ -39,6 +39,10 @@
               =link_to('Pilots',{action: 'index',controller: '/pilots'})
             %li
               =link_to('History',{action: 'index',controller: '/history'})
+            %li
+              %a{href:"#"}
+                Version
+                = ERLT_VERSION
         / /.nav-collapse
     .container-fluid
       .row
