--- a/web/app/views/shared/_table_race_results_standard_mode.html.haml
+++ b/web/app/views/shared/_table_race_results_standard_mode.html.haml
@@ -26,7 +26,11 @@
           %strong
             = index + 1
         %td
-          = image_tag(entry['pilot'].image.url,width: 50,height: 50)
+          - if !entry['pilot'].image.blank?
+            - if @current_format == :pdf
+              = wicked_pdf_image_tag(entry['pilot'].image.url,width: 50,height: 50)
+            - else
+              = image_tag(entry['pilot'].image.url,width: 50,height: 50)
         %td
           %strong
             = entry['pilot'].name
