fix for button visibility

--- a/web/app/views/system/pilot/edit.html.haml
+++ b/web/app/views/system/pilot/edit.html.haml
@@ -28,5 +28,5 @@
     %label{:for => "exampleInputEmail2"}
       = t('pilot.image')
     = f.file_field(:image, class: 'form-control')
-  %button.btn.btn-default{:type => "submit"}
+  %button.btn.btn-default.btn-primary{:type => "submit"}
     = t('actions.update')
