new colors new feeling more racy

--- a/web/app/assets/stylesheets/_colors.scss
+++ b/web/app/assets/stylesheets/_colors.scss
@@ -1,4 +1,9 @@
 //== Colors
 
-$primary: #AD141E;
-$secondary: #2d2e33;
+$primary: #f9b233;
+$secondary: #252525;
+$grey1: #41444d;
+$grey2: #777980;
+$grey3: #9da0a8;
+$grey4: #bec2cc;
+$succes: #bec2cc;
